fix: slider & galery bugs + style: contrast color & title size

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .top-header .name {
-	font-size: 26px;
+	font-size: 32px;
 }
 
 .nav ul {
@@ -77,7 +77,7 @@ body {
 .about-me__title {
 	margin-top: 1em;
 	margin-bottom: 60px;
-	font-size: 30px;
+	font-size: 28px;
 	font-weight: 800;
 }
 .about-me__introduction {
@@ -113,7 +113,12 @@ body {
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
+	cursor: pointer;
 	color: #000
+}
+.nav-link:hover{
+	color: #fff;
+	background-color: #4c1616;
 }
 .item-column {
 	position: relative;
@@ -249,6 +254,13 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
+}
+
+.sr-color {
+	position: absolute;
+	color: #000;
+	width: 1px;
+	height: 1px;
 }
 
 @media all and (max-width: 1180px) {
